--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -97,6 +97,8 @@ bSkipMovies=False
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="/Game/Maps/GameStartupMap")
 +MapsToCook=(FilePath="/Game/Maps/Lobby")
++MapsToCook=(FilePath="/Game/Maps/ArenaMap")
++MapsToCook=(FilePath="/Game/Maps/TransitionMap")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
