--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/GameStartupMap.GameStartupMap
-EditorStartupMap=/Game/Maps/GameStartupMap.GameStartupMap
+EditorStartupMap=/Game/Maps/ArenaMap.ArenaMap
 TransitionMap=/Game/Maps/TransitionMap.TransitionMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
@@ -100,4 +100,7 @@ bInitServerOnClient=true
 
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+
+[/Script/OnlineSubsystemUtils.IpNetDriver]
+NetServerMaxTickRate=60
 
