After match end restart
Everything is broken

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -162,3 +162,6 @@ NetServerMaxTickRate=120
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/ArenaEliminators.ArenaCharacter.SprintCameraShake",NewName="/Script/ArenaEliminators.ArenaCharacter.WalkCameraShake")
